# dce

./: CMakeLists.txt  compile.sh  test.sh
dce/: CMakeLists.txt  dce.cpp  dce.h
test/: runme_large.sh  runme_small.sh  test.sh
test/golden/: lout.li  output_large.ps  output_small.ps
test/lout-3.24/: Makefile  lout  z01.dce  z01.ll  z01.opt  z01.s  z02.dce  z02.ll  z02.opt  z02.s  z03.dce  z03.ll  z03.opt  z03.s  z04.dce  z04.ll  z04.opt  z04.s  z05.dce  z05.ll  z05.opt  z05.s  z06.dce  z06.ll  z06.opt  z06.s  z07.dce  z07.ll  z07.opt  z07.s  z08.dce  z08.ll  z08.opt  z08.s  z09.dce  z09.ll  z09.opt  z09.s  z10.dce  z10.ll  (+166 more)
test/output/: output_large.ps  output_small.ps
